--- a/hk_auth_functions.csproj
+++ b/hk_auth_functions.csproj
@@ -8,14 +8,19 @@
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="GitHubJwt" Version="0.0.6" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.21.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.1.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="1.2.1" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.3.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.17.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.2.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.AuthenticationEvents" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Graph" Version="5.56.0" />
+    <PackageReference Include="Microsoft.Identity.Web.GraphServiceClient" Version="2.19.1" />
     <PackageReference Include="NetCoreForce.Client" Version="4.1.0" />
+    <PackageReference Include="Octokit" Version="13.0.0" />
     <PackageReference Include="ZendeskApi_v2" Version="3.12.4" />
   </ItemGroup>
   <ItemGroup>
